last layout bugs solved

--- a/src/components/cart-dropdown/cart-dropdown.scss
+++ b/src/components/cart-dropdown/cart-dropdown.scss
@@ -4,8 +4,8 @@
 	display: flex;
 	flex-direction: column;
 	background-color: rgb(255, 255, 255);
-	top: 89px;
-	right: 10px;
+	top: 88px;
+	right: 40px;
 	z-index: 5;
 	@media screen and (max-width: 800px) {
 		top: 66px;
