--- a/src/components/cart-icon/cartIcon.scss
+++ b/src/components/cart-icon/cartIcon.scss
@@ -24,7 +24,7 @@
 		}
 	}
 	.item-count {
-		// width: 32px;
+		width: 6px;
 		font-size: 12px;
 		font-weight: 500;
 		color: #000000;
