--- a/src/pages/collectionPage/collectionPage.scss
+++ b/src/pages/collectionPage/collectionPage.scss
@@ -6,6 +6,7 @@
 	.collection-title {
 		display: flex;
 		justify-content: center;
+		align-items: center;
 		width: 100%;
 		height: 40px;
 		background-color: #fce333;
@@ -56,7 +57,6 @@
 		cursor: pointer;
 		height: 54px;
 		margin: 32px 0;
-		// clip-path: polygon(2.5% 0%, 100% 0%, 97.5% 100%, 0% 100%);
 		background-color: #000000;
 
 		&:hover {
